--- a/cms/css/style_prestadora.css
+++ b/cms/css/style_prestadora.css
@@ -4,4 +4,55 @@
   width: 1000px;
   height: 450px;
   background: green;
+  border-radius: 20px;
+}
+
+.titulo_prestadora{
+  width: 800px;
+  height: 30px;
+  margin: auto;
+  /* padding-bottom: 10px; */
+  background-color: pink;
+}
+
+.titulo_prestadora ul{
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.titulo_prestadora ul li{
+  width: 160px;
+  height: 30px;
+  float: left;
+  text-align: center;
+  font-size: 25px;
+  margin-left: 10px;
+}
+
+.conteudo_prestadora{
+  width: 800px;
+  height: auto;
+  background-color: red;
+  overflow-y: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.conteudo_prestadora ul{
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+.conteudo_prestadora ul li{
+  width: 150px;
+  height: auto;
+  min-height: 30px;
+  float: left;
+  margin-left: 20px;
+  text-align: center;
+  font-size: 20px;
+  overflow: hidden;
 }
