--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -43,6 +43,65 @@ body{
   margin-left: 50px;
 }
 
+/* Modal */
+
+.modal{
+	width:300px;
+	height:300px;
+	background-color:#000;
+	/* margin:auto; */
+  /* padding-top: 50%; */
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+   /* margin-left: 300px; */
+
+
+}
+
+.modal_user{
+	width:300px;
+	height:300px;
+	background-color:blue;
+	/* margin:auto; */
+  /* padding-top: 50%; */
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+   /* margin-left: 300px; */
+   display: none;
+
+}
+
+.modalContainer{
+	width:100%;
+	height:100vh;
+	background: rgba(0, 0, 0, 0.7);
+	position:fixed;
+  margin: auto;
+	display:none;
+  z-index: 999;
+
+
+}
+
+
+
+.escolha{
+  width: 100%;
+  height: 100%;
+  background-color: red;
+}
+
+.tipo{
+  width: 120px;
+  height: 100%;
+  float: left;
+  margin-left: 5px;
+  background-color: green;
+}
 
 
 /* Slider */
@@ -505,13 +564,13 @@ margin-left: 1000px;
 }
 /*
 #carrossel_produtos_principal ul li:hover {
-	
-	
-	
+
+
+
     background-color:#eca023;
     transition: 1s;
     box-shadow: 1px 2px 2px #000;
-   background-color: blue; 
+   background-color: blue;
 }
 */
 
@@ -736,6 +795,243 @@ textarea{
 
 #back-to-top img:hover{
   opacity: inherit;
+}
+
+/* Chat bot */
+
+.chat_bot{
+  width: 60px;
+  height: 60px;
+  float: left;
+  /* margin-left: 1190px; */
+  position: fixed;
+  z-index: 999;
+  bottom: 0;
+  right: 160px;
+  border-radius: 100%;
+  /* background-color: blue; */
+
+}
+
+.imag_pulsar{
+  animation: pulse 1s linear infinite;
+   -webkit-animation: pulse 1s linear infinite;
+
+}
+
+@-webkit-keyframes pulse {
+    0% {
+    transform: scale(1, 1);
+    }
+    50% {
+    transform: scale(1.1, 1.1);
+    }
+    100% {
+    transform: scale(1, 1);
+    }
+
+@keyframes pulse {
+    0% {
+    transform: scale(1, 1);
+    }
+    50% {
+    transform: scale(1.1, 1.1);
+    }
+    100% {
+    transform: scale(1, 1);
+    }
+}
+}
+
+#bot{
+  width: 60px;
+  height: 60px;
+  float: left;
+  /* margin-left: 1190px; */
+  position: fixed;
+  z-index: 999;
+  bottom: 0;
+  right: 160px;
+  border-radius: 100%;
+
+}
+.chat_bot:hover>.container_bot{
+  display: block;
+  visibility: visible;
+    opacity: 1;
+    transition-duration: 2s;
+}
+
+/* #bot{
+  width: 500px;
+  height: 500px;
+  background-color: red;
+
+} */
+
+.container_bot{
+  width: 300px;
+  height: 400px;
+  /* background-color: #ccc; */
+  background-image: url(../imagens/fundo.png);
+  float: left;
+  position: fixed;
+  z-index: 999;
+  bottom: 0;
+  right: 160px;
+  border-radius:10px 10px  0 0px;
+  display: none;
+   visibility: hidden;
+}
+
+.user_bot{
+  width: 100%;
+  height: 50px;
+  background-color: green;
+  float: left;
+  border-radius:10px 10px  0 0px;
+
+}
+
+.segura_foto{
+  padding-top:5px;
+  width: 40px;
+  height: 40px;
+}
+
+
+
+.foto_bot{
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  margin-left: 10px;
+  background-color: red;
+}
+
+
+.foto_bot img{
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+
+}
+
+
+.chat_bot img{
+  width: 60px;
+  height: 60px;
+    border-radius: 100%;
+}
+
+#conteudo_bot{
+  width: 290px;
+  height: 300px;
+  /* background-color: red; */
+  margin: auto;
+  overflow-y: scroll;
+
+
+}
+
+#conteudo_bot::-webkit-scrollbar {
+  width:10px;
+  background:#e3e0d6;
+
+  } /* configurando scroll */
+#conteudo_bot::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.1);
+}
+
+#conteudo_bot::-webkit-scrollbar-thumb {
+   border-radius:10px;
+    background:#8b8778;
+   }
+
+.chat_mensagen{
+  width: 290px;
+  height: 50px;
+  /* background-color: blue; */
+  margin: auto;
+}
+
+.balao2{
+	background: #eff3f9;
+  border-radius: 10px;
+	width: 250px;
+  height: 90px;
+  margin: auto;
+	position: relative;
+    margin-bottom: 10px;
+
+}
+.balao2::before{
+
+	content: "";
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	left: -10px;
+  top: 25px;
+  background-color: #eff3f9;
+	-webkit-transform:rotate(45deg);
+}
+
+.balao3{
+	background: #F5FEE9;
+  border-radius: 10px;
+	width: 250px;
+  height: 90px;
+  margin: auto;
+	position: relative;
+  margin-bottom: 10px;
+
+}
+.balao3::before{
+
+	content: "";
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	left: 240px;
+  top: 25px;
+  background-color: #F5FEE9;
+	-webkit-transform:rotate(45deg);
+
+}
+
+.entrada_dado_chat{
+  width: 240px;
+  height: 40px;
+  /* background-color: pink; */
+  padding-top: 10px;
+  float: left;
+}
+
+.entrada_dado_chat input{
+  width: 220px;
+  height: 30px;
+  margin-left: 10px;
+  border-radius: 50px;
+  border: none;
+  text-align: center;
+
+}
+
+.buttom_enviar_mensagen{
+  width: 50px;
+  height: 50px;
+  /* background-color: green; */
+  float: left;
+}
+
+.buttom_enviar_mensagen input{
+  width: 50px;
+  height: 50px;
+  background-image: url(../imagens/plane.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
 }
 
 .rodape{
