--- a/cms/css/style_prestadora.css
+++ b/cms/css/style_prestadora.css
@@ -8,51 +8,81 @@
 }
 
 .titulo_prestadora{
-  width: 800px;
-  height: 30px;
+  width: 700px;
+  height: 50px;
   margin: auto;
   /* padding-bottom: 10px; */
   background-color: pink;
 }
 
-.titulo_prestadora ul{
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-}
 
-.titulo_prestadora ul li{
-  width: 160px;
-  height: 30px;
+.dados_prest{
+  width: 200px;
+  height: 40px;
   float: left;
   text-align: center;
   font-size: 25px;
-  margin-left: 10px;
+  /* background-color: blue; */
+  padding-top: 10px;
+  font-weight: bold;
 }
 
+.dados_prest_item_modo{
+  width: 200px;
+  height: 50px;
+  float: left;
+  text-align: center;
+  font-size: 25px;
+  /* background-color: green; */
+
+}
+
+.dados_prest_item{
+  width: 200px;
+  height: 40px;
+  float: left;
+  text-align: center;
+  font-size: 20px;
+  /* background-color: blue; */
+  padding-top: 10px;
+}
+
+.dados_prest_modo{
+  width: 200px;
+  height: 50px;
+  float: left;
+  text-align: center;
+  /* background-color: blue; */
+}
+
+.status_prest{
+  width: 100px;
+  height: 50px;
+  margin: auto;
+}
+
+.status_prest_modo{
+  width: 50px;
+  height: 30px;
+  float: left;
+  /* background-color: #000; */
+  margin-left: 20px;
+  padding-top: 10px;
+}
+
+.status_prest_modo img{
+  width: 30px;
+  height: 30px;
+
+}
+
+
 .conteudo_prestadora{
-  width: 800px;
+  width: 700px;
   height: auto;
   background-color: red;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
-}
-
-.conteudo_prestadora ul{
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
-
-.conteudo_prestadora ul li{
-  width: 150px;
-  height: auto;
-  min-height: 30px;
-  float: left;
-  margin-left: 20px;
-  text-align: center;
-  font-size: 20px;
-  overflow: hidden;
 }
