--- a/css/styleServico.css
+++ b/css/styleServico.css
@@ -17,7 +17,7 @@ h1{
   min-height: 200px;
   margin: auto;
   padding-top: 100px;
-    
+
 }
 /*div que segura o titulo da tela*/
 #suporte_servico{
@@ -25,7 +25,8 @@ h1{
   height: auto;
   min-height:200px;
   margin: auto;
-  background-color: #ccc;
+  /*background-color: #ccc;*/
+  color: #fff;
 }
 /*titulo da tela*/
 #texto_servico{
@@ -33,13 +34,20 @@ h1{
   height: 50px;
 
 }
+#texto_servico h1{
+  font-size: 100px;
+}
 /*barra de pesquisa de serviços*/
 #barraPesquisa{
   width: 800px;
   height: 50px;
   background-color: #ffffff;
   border-radius: 5px;
-  margin: auto;
+  margin-left: 15%;
+
+
+  margin-top: 100px;
+
 }
 #todosServicos{
     background-color:rgba(255,255,255,0.3);
@@ -47,33 +55,34 @@ h1{
     height:auto;
     margin-left:auto;
     margin-right:auto;
-    
+
 }
 /*div que vai suporta todas as imagens e caixas de descrição*/
 .container_imagemDescricao{
   width: 100%;
   height: auto;
   margin: auto;
-  min-height: 580px; 
-    
-    
+  min-height: 580px;
+
+
 }
 #suporte_imagemDescricao{
   max-width: 1200px;
   height: auto;
   min-height:580px;
   margin: auto;
+  margin-top: 100px;
 /*  background-color: #808080;*/
-    
+
 
 }
 .area_imagem{
   width: 250px;
   height: 200px;
     margin-left: 50px;
-    
 
-    
+
+
   /*background-color: black;*/
 
 }
@@ -81,7 +90,7 @@ h1{
   width: 200px;
   height: 200px;
     border-radius: 100%;
-    
+
   /*background-color: black;*/
 
 }
