--- a/css/styleMenus.css
+++ b/css/styleMenus.css
@@ -8,7 +8,8 @@
   /* background-color: #13436b; */
   background-color: #000;
   position: fixed;
-  z-index: 999;
+  z-index: 100;
+  float: left;
 }
 
 #menu_navegacao{
@@ -63,6 +64,8 @@
   width: 100%;
   height: 50%;
   /* background-color: red; */
+  /* z-index: -20; */
+
 }
 
 .bordao p {
@@ -70,6 +73,7 @@
   color: #fff;
   margin-left: 30%;
   font-family: 'Karla', sans-serif;
+
 }
 
 .menu_ancora_itens_principal{
@@ -155,4 +159,565 @@ color: #fff;
   border-radius: 100px;
 
   /* background-color: blue; */
+}
+
+
+
+/* Modal */
+.modalContainer{
+	width:100%;
+	height:100%;
+	background: rgba(0, 0, 0, 0.7);
+	position:fixed;
+  /* margin-left: 600px; */
+  /* margin: auto; */
+  margin-left: auto;
+  margin-right: auto;
+	display:none;
+  z-index: 999;
+}
+
+.modalContainer_cadastro{
+  width:100%;
+	height:100%;
+	position:fixed;
+	display:none;
+  z-index: 999;
+  /* background: rgba(0, 0, 0, 0.7); */
+
+}
+
+.modal{
+	max-width:1200px;
+	height:450px;
+	/* background-color:red; */
+  margin: auto;
+	/* margin:auto; */
+  padding-top:60px;
+  /* margin-top: 60px; */
+  /* margin-left: 50%; */
+  /* margin-right: auto; */
+  /* margin-bottom: auto; */
+   /* margin-left: 300px; */
+
+}
+
+
+
+.modal_cadastro{
+	max-width:1200px;
+	height:600px;
+	/* background-color:red; */
+  padding-top: 60px;
+  margin: auto;
+
+}
+
+
+.escolha::before{
+
+	content: "";
+	width: 30px;
+	height: 30px;
+	position: absolute;
+  margin-left: 200px;
+  top:50px;
+  background-color: #fff;
+  float: left;
+  /* z-index: 999; */
+	-webkit-transform:rotate(45deg);
+}
+
+
+.fechar{
+  width: 30px;
+  height: 30px;
+  background-image: url(../imagens/exit.png);
+  /* background-size: 100%; */
+  background-position:center;
+  background-color: #000;
+  border-top: 1px solid #eca020;
+  border-right: 1px solid #eca020;
+  float: left;
+  margin-left:285px;
+  margin-top: -15px;
+  border-radius: 100%;
+}
+
+/* Login */
+.titulo_login{
+  width: 280px;
+  height: 50px;
+  /* background-color: blue; */
+  margin: auto;
+  font-weight: 400;
+  text-align: center;
+}
+
+/* TETETETE */
+
+.FlowupLabels .fl_wrap {
+  /* Can change */
+  width: 280px;
+  height: 46px;
+  margin: 12px auto; /* change 0 to auto for center alignment */
+
+  /* Don't change */
+  display: block;
+  position: relative;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+/* initial label state */
+.FlowupLabels .fl_label {
+
+  top: 15px;
+  left: 5px;
+
+
+  position: absolute;
+  z-index: 3; /* Isso pode ser removido, mas os rótulos devem ser colocados após as entradas no HTML */
+  -webkit-transition: all .05s linear;
+     -moz-transition: all .05s linear;
+         -transition: all .05s linear;
+}
+
+.FlowupLabels .fl_input {
+
+  background: none;
+  border: none;
+  border-bottom: 2px solid #555;
+  border-radius: 0;
+  font-size: 16px;
+  line-height: 22px;
+  padding: 20px 0 0 5px;
+
+  position: absolute;
+  top:0;left:0;right:0;bottom:0;
+  width: 100%;
+  z-index: 2;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+
+
+.FlowupLabels .fl_wrap.focused .fl_label,
+.FlowupLabels .fl_wrap.populated .fl_label,
+
+.no-js .FlowupLabels .fl_label {
+
+  top: 0;
+  font-size: 12px;
+  color: #555;
+}
+.FlowupLabels .fl_wrap.focused .fl_label {
+  outline: 0;
+  color: #00A34D;
+}
+
+/* TETETETETET */
+
+.buttom_enviar_login{
+  width: 280px;
+  height: 50px;
+  /* background-color: blue; */
+  border-radius: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 10px;
+}
+
+#btnLogar{
+    width: 100%;
+    position: relative;
+    min-height: 44px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border-width: 1px;
+    border-style: solid;
+    background-color: rgb(33, 150, 243);
+    border-color: rgb(33, 150, 243);
+    border-image: initial;
+    border-radius: 40px;
+    padding: 10px 0px;
+    color: #fff;
+    font-weight: 400;
+}
+
+.manter_conectado{
+  width: 280px;
+  height: 40px;
+  margin: auto;
+  /* background-color: red; */
+  font-size: 13px;
+  padding-top: -5px;
+  text-align: center;
+}
+
+.stay-connected{
+
+  margin: 10px 0 20px;
+  font-size: 12px;
+  text-align: left;
+  position: relative;
+
+}
+
+
+.manter_conectado input[type=checkbox] {
+    outline: 0;
+    margin: 0 10px 0 0;
+    position: relative;
+    display: inline-block;
+    line-height: 1em;
+    background-color: #fff;
+    border: solid 1px #ccc;
+    padding: 0;
+    width: 16px;
+    height: 16px;
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+
+}
+
+#btnLogar select {
+    text-transform: none;
+
+}
+
+.termos_de_uso{
+  width: 280px;
+  height: 60px;
+  background-color: pink;
+  margin: auto;
+  padding-top: 10px;
+}
+
+.termos_de_uso p{
+  margin: 0px;
+  padding: 0px;
+
+  font-size: 13px;
+  color: #666;
+  letter-spacing: 0;
+  line-height: 19px;
+}
+
+.novo_por_aqui{
+  width: 280px;
+  height: 80px;
+  /* background-color: red; */
+  margin: auto;
+}
+
+.titulo_porAqui{
+  width: 100%;
+  height: 20px;
+  /* background-color: blue; */
+  padding-top: 20px;
+}
+
+.titulo_porAqui p{
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  font-size: 18px;
+  color: #666;
+  height: 20px;
+  padding: 5px 0;
+  /* background-color: #f7f7f7; */
+}
+
+#novo_cadastro_link{
+  text-align: center;
+  font-size: 20px;
+  color: #666;
+  height: 20px;
+  padding: 5px 0;
+  /* background-color: #f7f7f7; */
+}
+
+#login_cad_link{
+  text-align: center;
+  font-size: 20px;
+  color: #666;
+  height: 20px;
+  padding: 5px 0;
+  /* background-color: #f7f7f7; */
+}
+
+.titulo_login h1{
+  margin: 0px;
+  padding: 0px;
+  z-index:999;
+}
+
+.fechar_cadastro{
+  width: 30px;
+  height: 30px;
+  background-image: url(../imagens/exit.png);
+  /* background-size: 100%; */
+  background-position:center;
+  background-color: #000;
+  border-top: 1px solid #eca020;
+  border-right: 1px solid #eca020;
+  float: left;
+  margin-left:285px;
+  margin-top: -15px;
+  border-radius: 100%;
+
+}
+
+
+
+.escolha{
+  width: 300px;
+  height: 500px;
+  background-color: #fff;
+  box-shadow: 5px 10px 8px #eca020;
+  margin-left: 590px;
+}
+
+.tipo_login{
+  width: 280px;
+  height: 50px;
+  background-color: red;
+  margin: auto;
+
+}
+
+.tipo_login_{
+  width: 140px;
+  height: 50px;
+  float: left;
+  /* background-color: blue; */
+}
+
+
+
+.cadastro{
+  width: 300px;
+  height: 600px;
+  background-color: #fff;
+  box-shadow: 5px 10px 8px #eca020;
+  margin-left: 700px;
+}
+
+.foto_user_cad{
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  margin: auto;
+  background-image: url(../imagens/imageUser.png);
+}
+
+#img{
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
+  float: left;
+}
+.segura_file_prest{
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  background-color: #fff;
+  float: left;
+  margin-left: 170px;
+  margin-top: -65px;
+  z-index: 999;
+  /* position: absolute; */
+}
+.filePrest{
+  width: 70px;
+  height: 70px;
+  overflow: hidden;
+  background-image: url(../imagens/câmera.png);
+  background-size: 70px;
+  background-repeat: no-repeat;
+  float: left;
+
+}
+
+.filePrest input[type=file]{
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+}
+
+.formModal{
+  overflow-y: auto;
+  /* background-color: red; */
+  width: 300px;
+  height: 350px;
+}
+
+.formModal::-webkit-scrollbar {
+  width:10px;
+  background:#e3e0d6;
+
+  } /* configurando scroll */
+.formModal::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.1);
+}
+
+.formModal::-webkit-scrollbar-thumb {
+   border-radius:10px;
+    background:#8b8778;
+   }
+
+
+.cadastro::before{
+
+	content: "";
+	width: 30px;
+	height: 30px;
+	position: absolute;
+  margin-left: 160px;
+  top:50px;
+  background-color: #fff;
+  float: left;
+  /* z-index: 999; */
+	-webkit-transform:rotate(45deg);
+}
+
+.log{
+  width: 110px;
+  height: 50px;
+  /* background-color: red; */
+  float: left;
+  margin-top: 5px;
+}
+
+.nome_user{
+  width: 110px;
+  height: 50px;
+  /* background-color: green; */
+  float: left;
+}
+
+.nome_user p{
+  padding-top: 20px;
+  margin: 0px;
+  font-size: 15px;
+  color: #fff;
+  text-align: center;
+}
+
+.foto_user_login{
+  width: 40px;
+  height: 40px;
+  margin-left: 10px;
+  margin-top: 5px;
+  float: left;
+  border: 3px solid #fff;
+    border-radius: 100%;
+}
+
+.foto_user_login img{
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+}
+
+.sair_login{
+  width: 30px;
+  height: 30px;
+  /* background-color: pink; */
+  float: left;
+  margin-left: 5px;
+  margin-top: 15px;
+}
+
+.sair_login img{
+  width: 100%;
+  height: 100%;
+}
+
+.menu_user{
+  width: 300px;
+  height: 160px;
+  background-color: #fff;
+  margin-top: 35px;
+  float: left;
+  border-radius: 5px;
+  border: 1px solid #BDBDBD;
+  z-index: 9999;
+  position: fixed;
+
+}
+
+.segura_menu_info{
+  width: 400px;
+  height: 240px;
+  display: none;
+  /* background-color: red; */
+  float: left;
+  margin-top: -20px;
+  margin-left: -200px;
+
+}
+
+.log:hover>.segura_menu_info{
+  display: block;
+  transition: 2s;
+}
+
+.menu_user::before{
+
+	content: "";
+	width: 30px;
+	height: 30px;
+	position: absolute;
+  margin-left: 218px;
+  top:-5px;
+  background-color: #fff;
+  float: left;
+  /* z-index:-1; */
+	-webkit-transform:rotate(45deg);
+  /* border-top: 4px solid #BDBDBD; */
+  /* border-left: 4px solid #BDBDBD; */
+}
+
+.info_nome_user{
+  width: 100%;
+  height: 50px;
+  /* background-color: blue; */
+  border-bottom: 1px solid #666;
+}
+
+.info_nome_user h2{
+  margin: 0px;
+  padding-top: 5px;
+  padding-left: 10px;
+  color: #666;
+  font-size: 35px;
+  font-weight: 200;
+}
+
+.item_info{
+  width: 100%;
+  height: 20px;
+  /* background-color: red; */
+  margin-top: 5px;
+
+}
+
+.item_info a{
+  font-size: 20px;
+  margin-left: 10px;
+  text-decoration: none;
+  /* margin-top: 10px; */
+  font-weight: 200;
+  color: #000;
+}
+
+.item_info a:hover{
+
+  color: #eca023;
 }
