--- a/cms/css/styleUsuario.css
+++ b/cms/css/styleUsuario.css
@@ -50,6 +50,12 @@ h1{
   /*font-weight: bold;*/
 }
 
+.dados_user_view img{
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+
 .email_view{
   width: 280px;
   /*background-color: #c0c0c0;*/
@@ -82,8 +88,12 @@ h1{
 
 .conteudo_usuario_info{
   width: 1200px;
-  height: 50px;
-  /*background-color: red;*/
+  min-height:50px;
+  height: auto;
+  overflow: hidden;
+  background-color: red;
+  margin-top: 50px;
+
 }
 
 .modo_user{
