controle de conteudos cms/site

--- a/cms/css/styleGeral.css
+++ b/cms/css/styleGeral.css
@@ -298,9 +298,6 @@ nav ul li a{
 
 }
 
-
-
-
 .titulo_tbl_servico div{
   width: 50%;
   height: 100%;
@@ -318,6 +315,35 @@ nav ul li a{
   float: left;
   }
 
+  .abrir_modal{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+  }
+
+
+  .modal_servico{
+  	width:700px;
+  	height:600px;
+  	background-color:#000;
+  	/* margin:auto; */
+    margin-top: 180px;
+    /*margin-left: auto;
+    margin-right: auto;*/
+    margin-left: 300px;
+  }
+
+  .modalContainer_servico{
+  	width:100%;
+  	height:100vh;
+  	background: rgba(0, 0, 0, 0.7);
+  	position:fixed;
+    /* margin: auto; */
+  	display:none;
+    z-index: 999;
+
+
+  }
 
 /*PLANO*/
 
@@ -331,8 +357,6 @@ nav ul li a{
   /*margin-left: auto;
   margin-right: auto;*/
   margin-left: 300px;
-
-
 }
 
 .modalContainer{
