--- a/css/styleForum.css
+++ b/css/styleForum.css
@@ -3,6 +3,58 @@
 
 }
 
+
+
+.modal_nova_pergunta{
+	width:700px;
+	height:400px;
+	/* background-color:#000; */
+	/* margin:auto; */
+  margin-top: 10%;
+  /* margin: auto; */
+  margin-left: auto;
+  margin-right: auto;
+  /* margin-left: 300px; */
+
+
+}
+
+.barra_que_segura{
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  float: left;
+  padding-top: 1px;
+}
+
+.modalContainer_forum{
+	width:100%;
+	height:100vh;
+	/* background: rgba(0, 0, 0, 0.7); */
+	position:fixed;
+  /* margin: auto; */
+	display:none;
+  z-index: 999;
+
+
+}
+
+.segura_perguntas{
+  width: 100%;
+  height: 100%;
+  background-color: #1C4595;
+  padding-top: 10px;
+}
+
+.nova_pergunta{
+  width:670px;
+	height:380px;
+  margin-left: 10px;
+  border: 7px solid #fff;
+  background-color: #1C4595;
+
+}
+
 .cabecalho_forum{
     padding-top: 100px;
   width: 100%;
