--- a/css/styleMenus.css
+++ b/css/styleMenus.css
@@ -23,7 +23,7 @@
 .logo{
   width: 200px;
   height: 100%;
-   /*background-color: #BBA649; */
+   /* background-color: #BBA649; */
   float: left;
 }
 
@@ -587,11 +587,24 @@ color: #fff;
 }
 
 .log{
-  width: 110px;
+  width: 120px;
   height: 50px;
   /* background-color: red; */
   float: left;
   margin-top: 5px;
+}
+
+.caixa_de_ferramenta{
+  width: 50px;
+  height: 50px;
+  /* background-color: green; */
+  float: left;
+}
+
+.caixa_de_ferramenta img{
+  width: 50px;
+  height: 50px;
+  margin-top: 10px;
 }
 
 .nome_user{
