--- a/css/styleForum.css
+++ b/css/styleForum.css
@@ -198,10 +198,8 @@
 
 .pergunta_user_forum{
   width: 300px;
-  height: auto;
-  min-height: 100px;
-  overflow: hidden;
-  /* background-color: #680000; */
+  height: 400px;
+   /*background-color: #680000;*/
   margin-left: 50px;
   margin-top: 20px;
   margin-bottom: 50px;
@@ -233,8 +231,10 @@
 
 .dados_user_tema{
   width: 100%;
-  height: 30px;;
-   /*background-color: #006268;*/
+  min-height: 30px;
+	height: auto;
+   /* background-color: #006268; */
+	 overflow: hidden;
   /*float: left;*/
   margin-left: auto;
   margin-right: auto;
@@ -273,7 +273,8 @@
   height: auto;
   min-height: 100px;
   overflow: hidden;
-   /*background-color: #686800;*/
+   /* background-color: #686800; */
+	 margin-top: 15px;
   /*margin-left: 80px;*/
 }
 
@@ -286,6 +287,31 @@
   line-height: 1.5;
   color:#9E9E9E;
   font-family: 'Karla', sans-serif;
+}
+
+.pergunta_user{
+	width: 100%;
+	height: 30px;
+	/* background-color: red; */
+}
+
+.nome_user_perguntas{
+	width: 50%;
+	margin-left: auto;
+	/* background-color: blue; */
+	height: 30px;
+	margin-right: 10px;
+}
+
+.nome_user_perguntas p{
+	font-size: 15px;
+	margin: 0px;
+	padding-top: 10%;
+	font-weight: 500;
+	color:#9E9E9E;
+	word-spacing: 2px;
+	text-align: right;
+	font-style: italic;
 }
 
 .aspas{
@@ -314,7 +340,10 @@
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.2);
   text-align: center;
   padding-top: 5px;
-  margin: auto;
+  margin-left:auto;
+	margin-right: auto;
+	margin-top: 10px;
+
 }
 
 .btnResponder a{
