--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -62,6 +62,71 @@ body{
 
 }
 
+/* VER MAIS */
+
+.nav{display: none;
+    width:100px;
+    height: 10px;
+
+
+    }
+.nav ul{
+    border: 2px solid white;
+    background: #000;
+    height: auto;
+    border-radius: 20px;
+    display: table;
+    font-size: 25px;
+    padding: 15px 15px 15px 15px;
+    list-style: none;
+    margin-left: 50%;
+    margin-top: -20%;
+/*    max-width: 100%;*/
+
+}
+.nav li{
+
+    color: aliceblue;
+    font-family: cursive;
+
+}
+.nav li:hover{
+    border-bottom:solid 2px #DE0000 ;
+    color: aliceblue;
+    font-family: cursive;
+
+}
+#navbar-click{
+    max-width: 30px;
+    border: 3px solid #eca023;
+    border-radius: 50px;
+    margin-top: 15px;
+    background-color: #000
+
+    }
+#navbar-click:hover{
+
+background-color: #eca023;
+}
+.nav-bar{
+    width: auto;
+}
+
+.ver_mais_div{
+  /*background-color: red;*/
+  height: auto;
+  min-height: 30px;
+  width: 50px;
+  float: left;
+}
+
+.ver_mais_div a{
+  text-decoration: none;
+}
+
+
+
+
 /* Barra de pesquisa */
 
 .barra_buscar_dados{
@@ -195,10 +260,11 @@ body{
   height: 100%;
   /* background-color: blue; */
   float: left;
+
 }
 
 .imagen_titulo_servico img{
-  width: 87px;
+  width: 80px;
   height: 100%;
 
 }
@@ -212,13 +278,14 @@ body{
 
 .descricao_titulo_servico p{
   font-weight: bold;
-  text-align:center;
+  text-align:left;
 
 }
 
 .descricao_titulo_servico p a{
   text-decoration:none;
   color:#fff;
+  font-size: 20px;
 }
 
 .descricao_titulo_servico p a:hover{
