--- a/cms/css/styleGeral.css
+++ b/cms/css/styleGeral.css
@@ -144,22 +144,6 @@ nav ul li a{
 }
 
 
-/* FALE CONOSCO */
-
-#fale_conteudo{
-  min-height: 500px;
-  height: auto;
-  width: 1000px;
-  /*background-color: blue;*/
-}
-
-
-#tbl_consulta{
-  width: 850px;
-  height: 450px;
-  background-color: green;
-
-}
 
 
 
@@ -454,6 +438,7 @@ nav ul li a{
   margin-left: 20px;
   border-radius: 10%;
   border: 1px solid #9e9e9e;
+
 }
 
 .img_plano{
@@ -789,4 +774,124 @@ margin: auto;
 .modo img{
   width: 30px;
   height: 30px;
+}
+
+
+/*Prestadora*/
+
+.tbl_consulta_pretadora{
+  width: 1000px;
+  height: 450px;
+  background: green;
+  border-radius: 20px;
+}
+
+.titulo_prestadora{
+  width: 700px;
+  height: 50px;
+  margin: auto;
+  /* padding-bottom: 10px; */
+  background-color: pink;
+}
+
+
+.dados_prest{
+  width: 200px;
+  height: 40px;
+  float: left;
+  text-align: center;
+  font-size: 25px;
+  /* background-color: blue; */
+  padding-top: 10px;
+  font-weight: bold;
+}
+
+.dados_prest_item_modo{
+  width: 200px;
+  height: 50px;
+  float: left;
+  text-align: center;
+  font-size: 25px;
+  /* background-color: green; */
+
+}
+
+.dados_prest_item{
+  width: 200px;
+  height: 40px;
+  float: left;
+  text-align: center;
+  font-size: 20px;
+  /* background-color: blue; */
+  padding-top: 10px;
+}
+
+.dados_prest_modo{
+  width: 200px;
+  height: 50px;
+  float: left;
+  text-align: center;
+  /* background-color: blue; */
+}
+
+.status_prest{
+  width: 100px;
+  height: 50px;
+  margin: auto;
+}
+
+.status_prest_modo{
+  width: 50px;
+  height: 30px;
+  float: left;
+  /* background-color: #000; */
+  margin-left: 20px;
+  padding-top: 10px;
+}
+
+.status_prest_modo img{
+  width: 30px;
+  height: 30px;
+
+}
+
+
+.conteudo_prestadora{
+  width: 700px;
+  height: auto;
+  background-color: red;
+  /* overflow-y: auto; */
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+
+.modal_prestadora{
+	width:700px;
+	height:600px;
+	background-color:white;
+	/* margin:auto; */
+  margin-top: 180px;
+  /*margin-left: auto;
+  margin-right: auto;*/
+  margin-left: 300px;
+}
+
+.modalContainer_pretadora{
+	width:100%;
+	height:100vh;
+	background: rgba(0, 0, 0, 0.7);
+	position:fixed;
+  /* margin: auto; */
+	display:none;
+  z-index: 999;
+
+
+}
+
+.novo{
+  width: 50px;
+  height: 50px;
+  margin: auto;
 }
