--- a/cms/css/styleUsuario.css
+++ b/cms/css/styleUsuario.css
@@ -22,11 +22,23 @@ h1{
   padding: 0px;
   margin: 0px;
 }
-
+.titulo{
+  text-align: center;
+  font-size: 30px;
+  color: #000;
+}
+/**/
 #conteudo_usuario{
   width: 1000px;
   height: 50px;
   background-color: #636568;
+  /*margin-top: -175px;*/
+}
+#conteudo_usuario_detalhes{
+  width: 1000px;
+  height: 50px;
+  background-color: #636568;
+  margin-top: -175px;
 }
 
 .dados_user{
@@ -137,13 +149,19 @@ h1{
   top: -50px;
 
 }
-/*#userName{
-  /*background-color: blue;
-  width: 1000px;
-  height: 50px;
-  text-align: center;
-}*/
-/*#userName p{
-  padding: 0px;
-  margin: 0px;
+/**/
+.conteudo_informacoes{
+  width: 300px;
+   height: auto;
+   background-color: yellow;
+   margin-left: 175px;
+   margin-top: 15px;
+   float: left;
+
+}
+/*.exibir{
+  min-height: 30px;
+   height: auto;
+   width: 300px;
+   background-color: gainsboro;
 }*/
