--- a/cms/css/styleGeral.css
+++ b/cms/css/styleGeral.css
@@ -1,16 +1,622 @@
+/* Float label padrao */
+.segura_form{
+  width: 360px;
+  height: 200px;
+  margin: auto;
+  /* background-color: blue; */
+  padding-left: 10%;
+}
+
+
+#formBody .control {
+  float: left;
+  position: relative;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+  padding-top: 23px;
+  padding-bottom: 10px;
+
+
+}
+#formBody .control.small {
+  width: 300px;
+
+  margin: auto;
+}
+#formBody .control.medium {
+  width: 260px;
+  margin-left: 20px;
+}
+
+#formBody .control:last-child {
+  border: 0;
+}
+#formBody input,
+#formBody textarea {
+  display: block;
+  width: 100%;
+  border: 0;
+  outline: 0;
+  resize: none;
+}
+#formBody input + label,
+#formBody textarea + label {
+  position: absolute;
+  top: 10px;
+  transition: top 0.7s ease, opacity 0.7s ease;
+  opacity: 0;
+  font-size: 13px;
+  font-weight: 600;
+  color: #ccc;
+}
+#formBody input:valid + label,
+#formBody textarea:valid + label {
+  opacity: 1;
+  top: 3px;
+}
+#formBody input:focus + label,
+#formBody textarea:focus + label {
+  color: #2c8efe;
+}
+
+
+
 body{
   margin: 0px;
   padding: 0px;
 }
 
-#cabecalho_principal{
-  width: 100%;
-  height: auto;
-  min-height: 150px;
-  overflow: hidden;
-  position: absolute;
-  background-color: #000;
+.cor1{
+  background-color: #DADADA;
 }
+
+.cor2{
+    background-color:#AFAFAF;
+}
+
+.Principal_cms{
+  width: 100%;
+  height: 100vh;
+  background-color: red;
+}
+
+.menu_cms{
+  height: 100vh;
+  width: 20%;
+  background-color: #000;
+  float: left;
+}
+
+.info_funcionario{
+  width: 100%;
+  height: 20%;
+  /* background-color: #4c5409; */
+}
+
+.dados_user_func{
+  width: 95%;
+  height: 90%;
+  /* background-color: #f24232; */
+  padding-top: 5%;
+  padding-left: 5%;
+}
+
+.titulo_menu{
+  width: 100%;
+  height: 7%;
+  background-color: #0f0e0e;
+
+}
+
+.titulo_menu p{
+  margin: 0;
+  padding-top: 3%;
+  padding-left: 5%;
+  font-size: 150%;
+  color: #DADADA;
+}
+
+.item_menu{
+  width: 100%;
+  height: 6%;
+  border-bottom: 2px solid #2E353F;
+}
+
+.item_menu:hover{
+border-left: 5px solid red;
+width: 98%;
+}
+
+.item_menu p{
+  margin: 0px;
+  padding-left: 20%;
+  font-size: 130%;
+  padding-top: 3%;
+}
+
+.item_menu a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.img_user{
+  width: 35%;
+  height: 60%;
+  /* padding-top: 20px; */
+  float: left;
+
+}
+
+.img_user img{
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.nome_user_fuc{
+  width: 60%;
+  height: 25%;
+  /* background-color: blue; */
+  float: left;
+  padding-top: 13%;
+  padding-left: 5%;
+
+
+}
+
+.nome_user_fuc p{
+  margin: 0;
+  padding: 0;
+  font-size: 150%;
+    color:#fff;
+      font-weight: bold;
+
+}
+
+#cabecalho_principal_cms{
+  height: 15%;
+  width:100%;
+  background-color: #000;
+
+}
+
+
+.conteudo_principal{
+  width: 80%;
+  height: 85%;
+  background-color:#fff;
+  float: left;
+
+}
+
+.logo_cms{
+  width: 40%;
+  height: 100%;
+  /* background-color: #fa3456; */
+  float: left;
+}
+
+
+.logout{
+  width: 40%;
+  height: 100%;
+  float: left;
+  /* background-color: #f12345; */
+}
+
+.sair_btn{
+  width: 20%;
+  height: 30%;
+  /* background-color: purple; */
+  border: 2px solid purple;
+  margin-left: 75%;
+  margin-top: 5%;
+  text-align: center;
+  border-radius: 50px;
+
+}
+
+.sair_btn:hover{
+  background-color: purple;
+  border: 2px solid #fff;
+}
+
+.sair_btn a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 20px;
+}
+
+.cadastro_efetuados{
+  width: 47%;
+  height: 48%;
+  background-color: #bca544;
+  float: left;
+  margin-left: 2%;
+  margin-top: 3%;
+}
+
+.titulo_grafico{
+  width: 100%;
+  height: 20%;
+  background-color: #a554fa;
+}
+
+.titulo_grafico p{
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 300%;
+}
+
+.grafico{
+  width: 100%;
+  height: 80%;
+  background-color: #25dafa;
+}
+
+.grafico img{
+  width: 100%;
+  height: 100%;
+}
+
+.conteudo_padrao{
+   width: 100%;
+   height: 90%;
+   background-color: #fff;
+   float: left;
+}
+
+
+
+
+/*Fale Conosco*/
+
+.tbl_consulta{
+  width: 700px;
+  height: 300px;
+  /* background-color: green; */
+  border-radius: 10%;
+  border: 1px solid #000;
+  margin: auto;
+}
+
+.tbl_consulta_titulos{
+  width: 422px;
+  height: 30px;
+  border:1px solid;
+  float: left;
+}
+
+.tbl_consulta_registros{
+  width: 850px;
+  height: 30px;
+}
+
+.tbl_consulta_registro{
+  width: 422px;
+  height: 30px;
+  border:1px solid;
+  float: left;
+}
+
+.Titulo{
+  width: 800px;
+  height: 30px;
+  /* background-color: red; */
+  margin: auto;
+  padding-bottom: 10px;
+}
+
+.Titulo ul{
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+
+}
+
+
+.Titulo ul li{
+  width: 150px;
+  height: 30px;
+  margin-left: 10px;
+  float: left;
+  /* background-color: #fcfc00; */
+  text-align: center;
+  font-size: 30px;
+}
+
+
+.conteudo{
+  width: 800px;
+  /*background-color:red;*/
+  height: auto;
+  min-height: 30px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.conteudo ul{
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+
+}
+
+
+.conteudo ul li{
+  width: 150px;
+  height: auto;
+  min-height: 30px;
+  overflow: hidden;
+  margin-left: 10px;
+  float: left;
+  /* background-color: #fcfc00; */
+  text-align: center;
+  font-size: 20px;
+}
+
+.segura_modo{
+  width: 100px;
+  height: 30px;
+  margin: auto;
+}
+
+.modo{
+  width: 30px;
+  height: 30px;
+  float: left;
+  margin-left: 10px;
+}
+
+.modo img{
+  width: 30px;
+  height: 30px;
+}
+
+
+/* SERVICO */
+
+.conteudo_servico{
+   width: 100%;
+   height: 100%;
+   /* background-color: red; */
+
+}
+
+.cabecalho_servicos{
+  width: 100%;
+  height: 10%;
+  background-color:#000000;
+
+}
+
+.cabecalho_servicos h1{
+  color: #f09000;
+  font-family: monospace;
+  font-size: 300%;
+  padding-left: 5%;
+}
+
+.conteudos_servico{
+  min-height: 90%;
+  width: 100%;
+  /* background-color: #00db03; */
+
+}
+
+.container_opc{
+  height: 200px;
+  width: 200px;
+  /* background-color: red; */
+    background-color: white;
+  padding-top: 20px;
+}
+
+.container_opc div{
+  height: 40px;
+  width: 150px;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.listaServicos{
+  height: 450px;
+  width: 100%;
+  background-color: #fff;
+  margin: auto;
+  overflow-y: scroll;
+}
+
+
+.listaServicos::-webkit-scrollbar {
+  width:10px;
+  background:#e3e0d6;
+
+  } /* configurando scroll */
+.listaServicos::-webkit-scrollbar-track {
+  background: rgba(0,0,0,0.1);
+}
+
+.listaServicos::-webkit-scrollbar-thumb {
+   border-radius:10px;
+    background:#8b8778;
+   }
+
+
+.titulo_tbl_servico{
+  max-width: 1200px;
+  height: 10%;
+  /* border: 1px solid #000; */
+  background-color: #fff;
+  margin: auto;
+
+}
+
+.conteudo_tbl_servico{
+  width:33%;
+  height: 100%;
+  /* background-color: white; */
+  float: left;
+}
+
+.conteudo_tbl_servico p{
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+  font-size: 200%;
+}
+
+.conteudo_tblServico{
+  width: 100%;
+  height: 30%;
+  /* background-color: green; */
+  margin: auto;
+}
+
+.item_tblServico{
+  width: 33%;
+  height: 100%;
+  float: left;
+}
+
+.item_tblServico p{
+  margin: 0px;
+  padding-top: 10%;
+  padding-left: 10%;
+  text-align: left;
+  font-size: 150%;
+}
+
+.imgServico{
+  width: 50%;
+  height: 85%;
+  margin-top: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  /* background-color: red; */
+}
+
+.imgServico img{
+  width: 100%;
+  height: 100%;
+
+}
+
+.img_servico {
+  width: 100px;
+  height: 100px;
+  margin: auto;
+}
+
+.img_servico img{
+  width: 100px;
+  height: 100px;
+  margin: auto;
+}
+
+.segura_modo{
+  width: 100px;
+  height: 30px;
+  margin: auto;
+  padding-top: 10%;
+}
+
+.modo{
+  width: 30px;
+  height: 30px;
+  float: left;
+  margin-left: 10px;
+}
+
+.modo img {
+  width: 30px;
+  height: 30px;
+
+}
+
+
+.resultado_servico{
+  width: 100%;
+  height: 20px;
+}
+
+.resultado_servico div{
+  width: 50%;
+  height: 20px;
+  float: left;
+  }
+
+  .abrir_modal{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+  }
+
+
+  .modal_servico{
+  	width:30%;
+  	height:80%;
+    margin-left: 25%;
+
+  	background-color:#fff;
+  	/* margin:auto; */
+    /*margin-left: auto;
+    margin-right: auto;*/
+
+  }
+
+  .modalContainer_servico{
+  	width:100%;
+  	height:100vh;
+  	background: rgba(0, 0, 0, 0.7);
+  	position:fixed;
+    /* margin: auto; */
+  	display:none;
+    z-index: 999;
+
+
+  }
+
+  .titulo_Servico_modal{
+    height: 10%;
+    width: 100%;
+    /* background-color: blue; */
+  }
+
+  .tituo_sevico_modal_item{
+    width: 80%;
+    height: 100%;
+    float: left;
+  }
+
+  .tituo_sevico_modal_item h1{
+    text-align: center;
+  }
+
+  .sair_modal{
+    width: 50px;
+    height: 50px;
+    float: left;
+    /* background-color: red; */
+  }
+
+  .fechar_modal{
+    width: 30px;
+    height: 30px;
+  }
+
+  .fechar_modal img{
+    width: 30px;
+    height: 30px;
+  }
+
+
+
+/* Velho cms */
 
 .cabecalho{
   max-width: 1200px;
@@ -48,42 +654,9 @@ body{
   color: #fff;
 }
 
-.logout{
-  width: 200px;
-  height: 100%;
-  float: left;
-  /* background-color: green; */
-}
 
-.img_user{
-  width: 100px;
-  height: 100px;
-  margin: auto;
-  /* padding-top: 20px; */
-}
 
-.img_user img{
-  width: 100%;
-  height: 100%;
-  border-radius: 100%;
-}
 
-.sair_btn{
-  width: 80px;
-  height: 30px;
-  background-color: purple;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  text-align: center;
-  border-radius: 50px;
-}
-
-.sair_btn a{
-  text-decoration: none;
-  color: #fff;
-  font-size: 20px;
-}
 
 
 /* MENu */
@@ -125,209 +698,20 @@ nav ul li a{
 }
 
 
-.conteudo_principal{
+/* .conteudo_principal{
   max-width: 1200px;
   height: auto;
   min-height: 1000px;
   overflow: hidden;
   background-color: blue;
   margin: auto;
-}
-
-.conteudo_padrao{
-   width: 1000px;
-   height: auto;
-   min-height: 500px;
-   background-color: red;
-   padding-top: 150px;
-   float: left;
-}
+} */
 
 
 
 
 
-/* SERVICO */
 
-.conteudo_servico{
-   width: 1000px;
-   height: auto;
-   min-height: 500px;
-   background-color: red;
-   padding-top: 150px;
-}
-
-.cabecalho_servicos{
-  width: 100%;
-  height: 55px;
-  background-color:#000000;
-  padding-top: 50px
-}
-
-.cabecalho_servicos h1{
-  color: #f09000;
-  font-family: monospace;
-  font-size: 40px;
-}
-
-.conteudos_servico{
-  min-height: 500px;
-  width: 700px;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.container_opc{
-  height: 200px;
-  width: 200px;
-  background-color: red;
-  padding-top: 20px;
-}
-
-.container_opc div{
-  height: 40px;
-  width: 150px;
-  background-color: white;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.listaServicos{
-  height: 500px;
-  width: 900px;
-  margin-top: 20px;
-  overflow: auto;
-}
-
-.titulo_tbl_servico{
-  width: 700px;
-  height: 30px;
-  border: 1px solid #000;
-  /*background-color: red;*/
-
-}
-
-.titulo_tbl_servico ul{
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-}
-
-.titulo_tbl_servico ul li{
-  width: 200px;
-  height: 30px;
-  font-size: 30px;
-  float: left;
-  margin-left: 10px;
-  /*background-color: blue;*/
-  text-align: center;
-  /*border: 1px solid #000;*/
-}
-
-
-.titulo_tbl_servico_conteudo{
-  width: 700px;
-  height: 100px;
-  /*background-color: green;*/
-
-  margin-top: 10px;
-  border: 1px solid #000;
-}
-
-.titulo_tbl_servico_conteudo ul{
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-}
-
-.titulo_tbl_servico_conteudo ul li{
-  width: 200px;
-  height: 100px;
-  font-size: 20px;
-  float: left;
-  margin-left: 10px;
-  /*background-color: blue;*/
-  text-align: center;
-}
-
-.img_servico {
-  width: 100px;
-  height: 100px;
-  margin: auto;
-}
-
-.img_servico img{
-  width: 100px;
-  height: 100px;
-  margin: auto;
-}
-
-.segura_modo{
-  width: 100px;
-  height: 30px;
-  margin: auto;
-}
-
-.modo{
-  width: 30px;
-  height: 30px;
-  float: left;
-  margin-left: 10px;
-}
-
-.modo img {
-  width: 30px;
-  height: 30px;
-
-}
-
-.titulo_tbl_servico div{
-  width: 50%;
-  height: 100%;
-  float: left;
-}
-
-.resultado_servico{
-  width: 100%;
-  height: 20px;
-}
-
-.resultado_servico div{
-  width: 50%;
-  height: 20px;
-  float: left;
-  }
-
-  .abrir_modal{
-    width: 50px;
-    height: 50px;
-    background-color: red;
-  }
-
-
-  .modal_servico{
-  	width:700px;
-  	height:600px;
-  	background-color:#000;
-  	/* margin:auto; */
-    margin-top: 180px;
-    /*margin-left: auto;
-    margin-right: auto;*/
-    margin-left: 300px;
-  }
-
-  .modalContainer_servico{
-  	width:100%;
-  	height:100vh;
-  	background: rgba(0, 0, 0, 0.7);
-  	position:fixed;
-    /* margin: auto; */
-  	display:none;
-    z-index: 999;
-
-
-  }
 
 /*PLANO*/
 
@@ -367,9 +751,6 @@ nav ul li a{
 
 }
 
-.conteudo_padrao{
-  background-color: #fff;
-}
 
 .carrosel_planos{
   width: 1000px;
@@ -630,6 +1011,11 @@ nav ul li a{
   box-shadow:0 5px 0 #00b008;
 }
 
+.segura_file{
+  width: 30px;
+  height: 70px;
+  margin-top: 30px;
+}
 
 .filePost{
   width: 50px;
@@ -637,7 +1023,6 @@ nav ul li a{
   overflow: hidden;
   background-image: url(../../imagens/cam.png);
   background-size: 50px;
-
   margin-left: auto;
   margin-right:auto;
 }
@@ -658,8 +1043,8 @@ nav ul li a{
 .preview_img{
   width: 300px;
   height: 200px;;
+  margin-left: 10%;
 
-margin: auto;
   /* background-color: green; */
 }
 
@@ -669,112 +1054,6 @@ margin: auto;
 }
 
 
-
-/*Fale Conosco*/
-
-.tbl_consulta{
-  width: 700px;
-  height: 450px;
-  /* background-color: green; */
-  border-radius: 10%;
-  border: 1px solid #000;
-  margin: auto;
-}
-
-.tbl_consulta_titulos{
-  width: 422px;
-  height: 30px;
-  border:1px solid;
-  float: left;
-}
-
-.tbl_consulta_registros{
-  width: 850px;
-  height: 30px;
-}
-
-.tbl_consulta_registro{
-  width: 422px;
-  height: 30px;
-  border:1px solid;
-  float: left;
-}
-
-.Titulo{
-  width: 800px;
-  height: 30px;
-  /* background-color: red; */
-  margin: auto;
-  padding-bottom: 10px;
-}
-
-.Titulo ul{
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-
-}
-
-
-.Titulo ul li{
-  width: 150px;
-  height: 30px;
-  margin-left: 10px;
-  float: left;
-  /* background-color: #fcfc00; */
-  text-align: center;
-  font-size: 30px;
-}
-
-
-.conteudo{
-  width: 800px;
-  /*background-color:red;*/
-  height: auto;
-  min-height: 30px;
-  overflow: hidden;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
-}
-
-.conteudo ul{
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-
-}
-
-
-.conteudo ul li{
-  width: 150px;
-  height: auto;
-  min-height: 30px;
-  overflow: hidden;
-  margin-left: 10px;
-  float: left;
-  /* background-color: #fcfc00; */
-  text-align: center;
-  font-size: 20px;
-}
-
-.segura_modo{
-  width: 100px;
-  height: 30px;
-  margin: auto;
-}
-
-.modo{
-  width: 30px;
-  height: 30px;
-  float: left;
-  margin-left: 10px;
-}
-
-.modo img{
-  width: 30px;
-  height: 30px;
-}
 
 
 /*Prestadora*/
