--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -46,7 +46,7 @@ body{
 /* Slider */
 .container_slider{
   width: 100%;
-  height: 100vh;
+  height: 100vw;
   /*background-color: red;*/
   padding-top:100px;
   background-image: url(../imagens/10.jpg);
@@ -172,6 +172,10 @@ background-color: #eca023;
 
 }
 
+.teste{
+  margin-top: 200px;
+}
+
 .btnBuscarddos{
   width: 50px;
   height: 27px;
@@ -194,6 +198,23 @@ background-color: #eca023;
 }
 
 
+
+.slider_menu{
+  max-width: 1200px;
+  height: 100px;
+  background-color: red;
+
+  margin:auto;
+
+  float: left;
+  /* margin-left: 1190px; */
+  bottom: 0;
+  right: 0;
+
+}
+
+
+
 /* menu servicos */
 
 .container_menu_sevicos{
@@ -206,6 +227,7 @@ background-color: #eca023;
 /*   opacity: 0.9;*/
    color: #fff;
 }
+
 
 #Servicos{
   max-width: 1200px;
