--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -46,18 +46,19 @@ body{
 /* Slider */
 .container_slider{
   width: 100%;
-  height: 100vw;
-  /*background-color: red;*/
-  padding-top:100px;
-  background-image: url(../imagens/10.jpg);
-  background-attachment:fixed;
-    background-size: cover;
+  height: 100%;
+  background-color: red;
+
+
 }
 
 #slider{
   max-width: 100%;
-  height: 560px;
+  height: 100vh;
   /* background-color: #ccc; */
+  background-image: url(../imagens/10.jpg);
+  background-attachment:fixed;
+    background-size: cover;
 
 
 }
@@ -201,17 +202,119 @@ background-color: #eca023;
 
 .slider_menu{
   max-width: 1200px;
-  height: 100px;
-  background-color: red;
+  height: 50%;
+  /* background-color: red; */
+  margin: auto;
 
-  margin:auto;
-
-  float: left;
   /* margin-left: 1190px; */
-  bottom: 0;
-  right: 0;
+
+
 
 }
+.conteudo_slider_menu{
+  width: 1200px;
+  height: 50%;
+  /* background-color:blue; */
+  margin: auto;
+
+}
+
+.espaco_menu1{
+  width: 1200px;
+  height: 70%;
+  /* background-color:green; */
+  margin: auto;
+}
+
+.espaco_menu2{
+  width: 1200px;
+  height: 30%;
+  /* background-color:green; */
+  margin: auto;
+}
+
+.passar_carrosel_menu{
+  width:9%;
+  height: 100%;
+  /* background-color: yellow; */
+  float: left;
+}
+
+.passar_carrosel_menu img{
+  width:50%;
+  height: 50%;
+  padding-top: 10%;
+  padding-left: 15%;
+}
+
+.dominuir img{
+  width: 40%;
+  height: 40%;
+  margin-top: 7%;
+}
+
+.container_carrosel_menu{
+  width: 84%;
+  height: 100%;
+  /* background-color: pink; */
+  float: left;
+
+}
+
+.container_carrosel_menu ul{
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  list-style: none;
+}
+
+.container_carrosel_menu ul li{
+  width: 15%;
+  height: 100%;
+  margin-left: 1%;
+  /* background-color: red; */
+  float: left;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+.container_carrosel_menu ul li a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.titulo_menu_carrossel{
+  width: 100%;
+  height: 30%;
+  /* background-color: #fadaff; */
+}
+
+.titulo_menu_carrossel p{
+  margin: 0px;
+  padding-top: 1%;
+  font-size: 130%;
+  text-align: center;
+  font-weight:bold;
+}
+
+.descricao_menu_carrosel{
+  width: 100%;
+  height: 70%;
+  /* background-color: #cddccd; */
+}
+
+.descricao_menu_carrosel p{
+  margin: 0px;
+  padding-left: 2%;
+  padding-right: 2%;
+  text-align: center;
+  font-size: 80%;
+
+  /* background-color: #cddccd; */
+}
+
+
 
 
 
