--- a/cms/css/style_carbook.css
+++ b/cms/css/style_carbook.css
@@ -5,31 +5,15 @@
   background-color: red;
 }
 
-/* .suporte_video{
-  width: 500px;
-  height: 300px;
-  background-color: blue;
-  margin: auto;
-  margin-top: 5px;
-
-} */
-
 .cadastro_carbook{
-  width: 750px;
-  height: 620px;
+  width: 50%;
+  height: 550px;
   float: left;
-  margin-left: 5px;
-  /*background-color: green;*/
+  margin-left: 30px;
+  margin: 0px;
+  padding: 0px;
+  background-color: blue;
 }
-
-/* #btn_editar{
-width: 63px;
-height: 63px;
-/*background-color: magenta;
-margin-left: 780px;
-margin-top: 250px;
-} */
-
 
 .control_small{
   width:600px;
@@ -39,10 +23,126 @@ margin-top: 250px;
   margin-top: 10px;
 }
 
+.buttom_enviar{
+  width: 100px;
+  height: 50px;
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#btnEnviar{
+  width: 80px;
+  height: 30px;
+  background:green;
+  color:#fff;
+  box-shadow:0 5px 0 #00d103;
+  border:none;
+  cursor: pointer;
+  display:inline-block;
+  text-decoration: none;
+  border-radius: 10px;
 
 
-/*.imgCarbook{
-  width: 50%;
+}
+
+
+.filePost{
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  /* background-image: url(../../imagens/cam.png); */
+  background-size: 50px;
+  margin-left: auto;
+  margin-right:auto;
+}
+
+.filePost input[type=file]{
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+}
+
+.segura_preview{
+  width: 600px;
+  height: 200px;
+  margin: auto;
+  /* background-color: red; */
+}
+
+.preview_img{
+  width: 300px;
+  height: 200px;;
+  margin-left: 10%;
+
+  /* background-color: green; */
+}
+
+.preview_img img{
+  width: 100%;
+  height: 200px;
+}
+
+/*lista de cadastros*/
+.listarCadastros{
+  width:85%;
+  height: 400px;
+  background-color: yellow;
+  margin: auto;
+  overflow-y: scroll;
+}
+
+.titulo_carbook{
+  max-width: 100%;
+  height: 10%;
+  /* border: 1px solid #000; */
+  /* background-color: #fff; */
+  margin: auto;
+
+}
+
+.conteudo_tbl_carbook{
+  width:30%;
+  height: 40px;
+  background-color: white;
+  float: left;
+  margin: auto;
+  margin-left: 15px;
+}
+
+.conteudo_tbl_carbook p{
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+  font-size: 200%;
+}
+
+.conteudoCarbook{
+  width: 100%;
+  height: 90px;
+  background-color: green;
+  padding: 0px;
+  margin: 0px;
+}
+
+.item_carbook{
+  width: 30%;
+  height: 75%;
+  float: left;
+  background-color: orange;
+  margin-left: 15px;
+}
+
+.item_carbook p{
+  margin: 0px;
+  padding-top: 10%;
+  padding-left: 10%;
+  text-align: left;
+  font-size: 150%;
+}
+
+.imgCarbook{
+  width: 65%;
   height: 85%;
   margin-top: 2%;
   margin-left: auto;
@@ -54,12 +154,37 @@ margin-top: 250px;
   width: 100%;
   height: 100%;
 
-}*/
+}
 
-.btn_salvar{
-width: 63px;
-height: 63px;
-/*background-color: magenta;
-margin-left: 695px;
-margin-top: 100px;*/
+.descCarbook{
+  width: 65%;
+  height: 85%;
+  margin-top: 2%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: red;
+  text-align: center;
+  font-style: bold;
+  font-size: 20px;
+}
+
+.segura_modo{
+  width:80px;
+  height: 30px;
+  margin: auto;
+  padding-top: 10%;
+}
+
+.modo{
+  width: 30px;
+  height: 30px;
+  float: left;
+  margin-left: 10px;
+  text-align: center;
+}
+
+.modo img {
+  width: 30px;
+  height: 30px;
+
 }
