--- a/css/stylePerfilUsuario.css
+++ b/css/stylePerfilUsuario.css
@@ -16,10 +16,39 @@ body{
 }
 #suporte_primaria{
   width: 100%;
-  height: 150px;
+  height: 200px;
   background-color: blue;
   margin: auto;
 }
+/*area imagem perfil*/
+#area_imagem{
+  width: 150px;
+  height: 150px;
+  margin-top: 150px;
+  margin-left: 20px;
+  float: left;
+}
+#img_perfil{
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  background-color: red;
+  float: left;
+}
+#img_perfil img{
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  box-shadow: 2px 3px 3px black;
+}
+
+
+/*#imagem{
+  width: 80px;
+  height: 50px;
+  background-color: #fff;
+  padding-top: 20px;
+}*/
 #suporte_secundaria{
   width: 100%;
   height: 150px;
@@ -32,6 +61,7 @@ body{
   background-color: black;
   margin: auto;
 }
+/*area imagem do usuario*/
 #areaImagem{
   margin: auto;
   width: 1050px;
@@ -40,19 +70,20 @@ body{
 }
 #imagensMaiores{
   width: 850px;
-  height: 400px;
-  background-color: #455667;
-    float: left;
+  height: auto;
+  min-height: 580px;
+  background-color: magenta;
+  float: left;
 }
-
-#imagensMenores{
+/*Area de vistas Recentes caixa do lado direito da tela*/
+/*#imagensMenores{
   width: 150px;
   height: 150px;
   margin-top: 20px;
   margin-left: 20px;
   background-color: #127596;
   float: left;
-}
+}*/
 
 #divisao_imagens{
   width: 850px;
@@ -70,9 +101,16 @@ body{
   margin-left: 120px;
 }
 
-.three_imagens{
-  width: 150px;
-  height: 200px;
+#divisao_imagens2{
+  background-color: green;
+  width: 850px;
+  height: 400px;
+}
+
+.imagens_menores{
+  width: 200px;
+  height: 100px;
+  background-color: red;
+  margin-left: 120px;
   float: left;
-  background-color: #567777;
 }
